force-app/main/default/objects/Job_Notes_Type_Mapping__mdt/Job_Notes_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Create Job Note for Service Request Updates</description>
    <label>Job Notes Type Mapping</label>
    <pluralLabel>Job Notes Type Mappings</pluralLabel>
</CustomObject>