force-app/main/default/objects/Job_Notes_Type_Mapping__mdt/fields/Is_Not_Blank__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Blank__c</fullName>
    <defaultValue>true</defaultValue>
    <description>indicate the value of the target field should not be blank</description>
    <label>Not Blank</label>
    <type>Checkbox</type>
</CustomField>