force-app/main/default/objects/Job_Notes_Type_Mapping__mdt/fields/Payload_Fields__c.field-meta.xml
<CustomField>
    <fullName>Payload_Fields__c</fullName>
    <description>which fields are going to be included in the payload (to be updated in the future)</description>
    <label>Payload Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>