force-app/main/default/objects/Job_Notes_Type_Mapping__mdt/fields/Service_Request_Update_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Update_Code__c</fullName>
    <label>Service Request Update Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>