force-app/main/default/objects/Job_Notes_Type_Mapping__mdt/fields/Trigger_Field__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Field__c</fullName>
    <description>which field on the object triggers job note creation</description>
    <label>Trigger Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>