force-app/main/default/objects/Job_Notes_Type_Mapping__mdt/fields/Trigger_Object__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Object__c</fullName>
    <description>which object triggers job note creation</description>
    <inlineHelpText>which object triggers job note creation</inlineHelpText>
    <label>Trigger Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>