force-app/main/default/objects/Job_Notes_Type_Mapping__mdt/fields/Trigger_Value__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Value__c</fullName>
    <description>which field value triggers job note creation</description>
    <label>Trigger Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>