force-app/main/default/objects/Job_Notes_Type_Mapping__mdt/fields/Work_Order_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Id_Field__c</fullName>
    <description>field API name indicates the work order id on the object.</description>
    <label>Work Order Id Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>